RESOLVED FIXED231719
REGRESSION (r283858): Intense white hover state appears on playback controls on Netflix/YouTube
https://bugs.webkit.org/show_bug.cgi?id=231719
Summary REGRESSION (r283858): Intense white hover state appears on playback controls ...
Aditya Keerthi
Reported 2021-10-13 21:03:03 PDT
1. Visit https://www.youtube.com/watch?v=Ft-pWVaRnQ8 2. Hover over one of the playback controls 3. Observe a white flash
Attachments
Patch (5.60 KB, patch)
2021-10-13 21:48 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-10-13 21:03:20 PDT
Aditya Keerthi
Comment 2 2021-10-13 21:48:32 PDT
EWS
Comment 3 2021-10-14 09:51:49 PDT
Committed r284169 (242988@main): <https://commits.webkit.org/242988@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441184 [details].
Note You need to log in before you can comment on or make changes to this bug.